k8s/jarvis-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: jarvis
spec:
  containers:
  - name: jarvis
    image: jarvis:v2
    ports:
    - containerPort: 80
