k8s/jarvis-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jarvis-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ec2-54-157-166-217.compute-1.amazonaws.com
    http:
      paths:
      - path: /jarvis
        pathType: Prefix
        backend:
          service:
            name: jarvis-service
            port:
              number: 80
